--- a/Learning_Testng/test-output/old/Suite/groups.html
+++ b/Learning_Testng/test-output/old/Suite/groups.html
@@ -1,1 +1,4 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>sanity</td><td>Account.loanAccount()[pri:0, instance:basic.Account@618b19ad]<br/>Payment.debitCard()[pri:0, instance:basic.Payment@2d3379b4]<br/>Account.loanAccount()[pri:0, instance:basic.Account@7f0eb4b4]<br/></td></tr>
+<tr><td>smoke</td><td>Account.loanAccount()[pri:0, instance:basic.Account@618b19ad]<br/>Account.currentAccount()[pri:0, instance:basic.Account@7f0eb4b4]<br/>Payment.creditCard()[pri:0, instance:basic.Payment@4efbca5a]<br/>Account.loanAccount()[pri:0, instance:basic.Account@7f0eb4b4]<br/></td></tr>
+</table>
