--- a/Learning_Testng/test-output/old/Suite/classes.html
+++ b/Learning_Testng/test-output/old/Suite/classes.html
@@ -16,11 +16,13 @@
 <tr>
 <td>&nbsp;</td>
 <td>loanAccount</td>
-<td>&nbsp;</td></tr>
+<td>smoke sanity </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>currentAccount</td>
-<td>&nbsp;</td></tr>
+<td>smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -42,7 +44,8 @@
 <tr>
 <td>&nbsp;</td>
 <td>debitCard</td>
-<td>&nbsp;</td></tr>
+<td>sanity </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>cod</td>
@@ -50,41 +53,8 @@
 <tr>
 <td>&nbsp;</td>
 <td>creditCard</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
+<td>smoke </td>
 </tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>basic.NewTest</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>test2</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>alpha</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>test1</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>beta</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
