--- a/Learning_Testng/test-output/old/Suite/methods-not-run.html
+++ b/Learning_Testng/test-output/old/Suite/methods-not-run.html
@@ -1,6 +1,9 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>basic.Account.loanAccount</td></tr>
+<tr><td>basic.Account.savingAccount</td></tr>
+<tr><td>basic.Payment.cod</td></tr>
+<tr><td>basic.Payment.debitCard</td></tr>
+<tr><td>basic.Account.savingAccount</td></tr>
+<tr><td>basic.Payment.cod</td></tr>
 <tr><td>basic.Payment.creditCard</td></tr>
 <tr><td>basic.Account.currentAccount</td></tr>
-<tr><td>basic.NewTest.alpha</td></tr>
 </table>
