--- a/Learning_Testng/test-output/old/Suite/methods.html
+++ b/Learning_Testng/test-output/old/Suite/methods.html
@@ -1,16 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e5fc98">  <td>23/05/11 08:20:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.test1()[pri:4, instance:basic.NewTest@72d1ad2e]">test1</td> 
-  <td>main@188523822</td>   <td></td> </tr>
-<tr bgcolor="a69ca8">  <td>23/05/11 08:20:00</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Payment.cod()[pri:0, instance:basic.Payment@2d7275fc]">cod</td> 
-  <td>main@188523822</td>   <td></td> </tr>
-<tr bgcolor="e5fc98">  <td>23/05/11 08:20:00</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.test2()[pri:1, instance:basic.NewTest@72d1ad2e]">test2</td> 
-  <td>main@188523822</td>   <td></td> </tr>
-<tr bgcolor="f56bcc">  <td>23/05/11 08:20:00</td>   <td>-30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Account.savingAccount()[pri:0, instance:basic.Account@37afeb11]">savingAccount</td> 
-  <td>main@188523822</td>   <td></td> </tr>
-<tr bgcolor="e5fc98">  <td>23/05/11 08:20:00</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.beta()[pri:3, instance:basic.NewTest@72d1ad2e]">beta</td> 
-  <td>main@188523822</td>   <td></td> </tr>
-<tr bgcolor="a69ca8">  <td>23/05/11 08:20:00</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Payment.debitCard()[pri:0, instance:basic.Payment@2d7275fc]">debitCard</td> 
-  <td>main@188523822</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>23/05/13 08:12:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Payment.creditCard()[pri:0, instance:basic.Payment@4efbca5a]">creditCard</td> 
+  <td>main@2079179914</td>   <td></td> </tr>
+<tr bgcolor="9e7ee8">  <td>23/05/13 08:12:38</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Account.loanAccount()[pri:0, instance:basic.Account@7f0eb4b4]">loanAccount</td> 
+  <td>main@2079179914</td>   <td></td> </tr>
+<tr bgcolor="9e7ee8">  <td>23/05/13 08:12:38</td>   <td>-28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Account.currentAccount()[pri:0, instance:basic.Account@7f0eb4b4]">currentAccount</td> 
+  <td>main@2079179914</td>   <td></td> </tr>
+<tr bgcolor="9e7ee8">  <td>23/05/13 08:12:38</td>   <td>85</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Account.loanAccount()[pri:0, instance:basic.Account@618b19ad]">loanAccount</td> 
+  <td>main@2079179914</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>23/05/13 08:12:38</td>   <td>90</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Payment.debitCard()[pri:0, instance:basic.Payment@2d3379b4]">debitCard</td> 
+  <td>main@2079179914</td>   <td></td> </tr>
 </table>
