--- a/Learning_Testng/test-output/old/Suite/classes.html
+++ b/Learning_Testng/test-output/old/Suite/classes.html
@@ -4,57 +4,19 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>basic.Account</td>
+<td>listener.FbTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>savingAccount</td>
+<td>logincheck</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>loanAccount</td>
-<td>smoke sanity </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>currentAccount</td>
-<td>smoke </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>basic.Payment</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>debitCard</td>
-<td>sanity </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>cod</td>
+<td>titleCheck</td>
 <td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>creditCard</td>
-<td>smoke </td>
-</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
