--- a/Learning_Testng/test-output/old/Suite/methods-alphabetical.html
+++ b/Learning_Testng/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b1776b">  <td>23/05/13 08:12:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Payment.creditCard()[pri:0, instance:basic.Payment@4efbca5a]">creditCard</td> 
-  <td>main@2079179914</td>   <td></td> </tr>
-<tr bgcolor="9e7ee8">  <td>23/05/13 08:12:38</td>   <td>-28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Account.currentAccount()[pri:0, instance:basic.Account@7f0eb4b4]">currentAccount</td> 
-  <td>main@2079179914</td>   <td></td> </tr>
-<tr bgcolor="b1776b">  <td>23/05/13 08:12:38</td>   <td>90</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Payment.debitCard()[pri:0, instance:basic.Payment@2d3379b4]">debitCard</td> 
-  <td>main@2079179914</td>   <td></td> </tr>
-<tr bgcolor="9e7ee8">  <td>23/05/13 08:12:38</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Account.loanAccount()[pri:0, instance:basic.Account@7f0eb4b4]">loanAccount</td> 
-  <td>main@2079179914</td>   <td></td> </tr>
-<tr bgcolor="9e7ee8">  <td>23/05/13 08:12:38</td>   <td>85</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Account.loanAccount()[pri:0, instance:basic.Account@618b19ad]">loanAccount</td> 
-  <td>main@2079179914</td>   <td></td> </tr>
+<tr bgcolor="b9f197">  <td>23/05/15 08:28:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FbTest.logincheck(org.testng.ITestContext)[pri:2, instance:listener.FbTest@4cc451f2]">logincheck</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
+<tr bgcolor="b9f197">  <td>23/05/15 08:28:52</td>   <td>-4058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FbTest.titleCheck(org.testng.ITestContext)[pri:1, instance:listener.FbTest@4cc451f2]">titleCheck</td> 
+  <td>main@1261153343</td>   <td></td> </tr>
 </table>
