--- a/Learning_Testng/test-output/emailable-report.html
+++ b/Learning_Testng/test-output/emailable-report.html
@@ -8,15 +8,13 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">chrome</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">3,189</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">edge</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,787</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">8,976</th><th colspan="2"></th></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">41</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">parallel.LoginTest</td><td><a href="#m0">test</a></td><td rowspan="1">1684204111246</td><td rowspan="1">3126</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">edge &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">parallel.LoginTest</td><td><a href="#m1">test</a></td><td rowspan="1">1684204114445</td><td rowspan="1">5783</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">basic.Account</td><td><a href="#m0">currentAccount</a></td><td rowspan="1">1684981997514</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m1">loanAccount</a></td><td rowspan="1">1684981997523</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m2">savingAccount</a></td><td rowspan="1">1684981997530</td><td rowspan="1">1</td></tr></tbody>
 </table>
-<h2>chrome</h2><h3 id="m0">parallel.LoginTest#test</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>edge</h2><h3 id="m1">parallel.LoginTest#test</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>edge</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">basic.Account#currentAccount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">basic.Account#loanAccount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">basic.Account#savingAccount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
