--- a/Learning_Testng/test-output/old/Default suite/classes.html
+++ b/Learning_Testng/test-output/old/Default suite/classes.html
@@ -4,29 +4,51 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>listener.MyTest</td>
+<td>basic.Account</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test2</td>
+<td>savingAccount</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test1</td>
-<td>&nbsp;</td></tr>
+<td>loanAccount</td>
+<td>smoke sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>currentAccount</td>
+<td>smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>beforeClass</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>beforeMethod</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>afterMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>afterClass</td>
+<td>&nbsp;</td></tr>
 </table>
