--- a/Learning_Testng/test-output/old/Default suite/methods.html
+++ b/Learning_Testng/test-output/old/Default suite/methods.html
@@ -1,8 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="718965">  <td>23/05/15 08:03:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTest.test1()[pri:0, instance:listener.MyTest@4a94ee4]">test1</td> 
-  <td>main@2087258327</td>   <td></td> </tr>
-<tr bgcolor="718965">  <td>23/05/15 08:03:31</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyTest.test2()[pri:0, instance:listener.MyTest@4a94ee4]">test2</td> 
-  <td>main@2087258327</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>23/05/25 08:03:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Account.beforeMethod()[pri:0, instance:basic.Account@48d5f34e]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1896552614</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>23/05/25 08:03:17</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Account.loanAccount()[pri:0, instance:basic.Account@48d5f34e]">loanAccount</td> 
+  <td>main@1896552614</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>23/05/25 08:03:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Account.beforeMethod()[pri:0, instance:basic.Account@48d5f34e]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1896552614</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>23/05/25 08:03:17</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Account.afterMethod()[pri:0, instance:basic.Account@48d5f34e]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1896552614</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>23/05/25 08:03:17</td>   <td>-24</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Account.beforeClass()[pri:0, instance:basic.Account@48d5f34e]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896552614</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>23/05/25 08:03:17</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Account.afterClass()[pri:0, instance:basic.Account@48d5f34e]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896552614</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>23/05/25 08:03:17</td>   <td>-32</td> <td>&nbsp;</td><td title="&gt;&gt;Account.beforeTest()[pri:0, instance:basic.Account@48d5f34e]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896552614</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>23/05/25 08:03:17</td>   <td>5</td> <td>&nbsp;</td><td title="&lt;&lt;Account.afterTest()[pri:0, instance:basic.Account@48d5f34e]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896552614</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>23/05/25 08:03:17</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Account.afterMethod()[pri:0, instance:basic.Account@48d5f34e]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1896552614</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>23/05/25 08:03:17</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Account.currentAccount()[pri:0, instance:basic.Account@48d5f34e]">currentAccount</td> 
+  <td>main@1896552614</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>23/05/25 08:03:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Account.beforeMethod()[pri:0, instance:basic.Account@48d5f34e]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1896552614</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>23/05/25 08:03:17</td>   <td>24</td> <td title="&lt;&lt;Account.afterSuite()[pri:0, instance:basic.Account@48d5f34e]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896552614</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>23/05/25 08:03:17</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Account.afterMethod()[pri:0, instance:basic.Account@48d5f34e]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1896552614</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>23/05/25 08:03:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Account.savingAccount()[pri:0, instance:basic.Account@48d5f34e]">savingAccount</td> 
+  <td>main@1896552614</td>   <td></td> </tr>
+<tr bgcolor="bf786e">  <td>23/05/25 08:03:17</td>   <td>-43</td> <td title="&gt;&gt;Account.beforeSuite()[pri:0, instance:basic.Account@48d5f34e]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896552614</td>   <td></td> </tr>
 </table>
